[Offline Pages] Delete associated page along with bookmark.

When deleting bookmarks we should also delete the associated offline page cache. Doing this by adding an observer owned by BookmarkModel and get initialized as part of BookmarkModel.

BUG=630796

Review-Url: https://codereview.chromium.org/2185973003
Cr-Commit-Position: refs/heads/master@{#416343}

Former-commit-id: c02075fe34677d1d194b65e6b2536a3f2204640a