chrome/browser/bookmarks/chrome_bookmark_client.cc
@@ -5,10 +5,12 @@
 #include "chrome/browser/bookmarks/chrome_bookmark_client.h"
 
 #include "base/logging.h"
+#include "base/memory/ptr_util.h"
 #include "build/build_config.h"
 #include "chrome/browser/favicon/favicon_service_factory.h"
 #include "chrome/browser/history/history_service_factory.h"
 #include "chrome/browser/profiles/profile.h"
+#include "components/bookmarks/browser/bookmark_model.h"
 #include "components/bookmarks/browser/bookmark_node.h"
 #include "components/bookmarks/browser/bookmark_storage.h"
 #include "components/bookmarks/managed/managed_bookmark_service.h"
@@ -17,6 +19,10 @@
 #include "components/history/core/browser/history_service.h"
 #include "components/history/core/browser/url_database.h"
 #include "content/public/browser/user_metrics.h"
+
+#if BUILDFLAG(ANDROID_JAVA_UI)
+#include "chrome/browser/android/offline_pages/offline_page_bookmark_observer.h"
+#endif
 
 ChromeBookmarkClient::ChromeBookmarkClient(
     Profile* profile,
@@ -29,6 +35,12 @@ ChromeBookmarkClient::~ChromeBookmarkClient() {
 void ChromeBookmarkClient::Init(bookmarks::BookmarkModel* model) {
   if (managed_bookmark_service_)
     managed_bookmark_service_->BookmarkModelCreated(model);
+
+#if BUILDFLAG(ANDROID_JAVA_UI)
+  offline_page_observer_ =
+      base::MakeUnique<offline_pages::OfflinePageBookmarkObserver>(profile_);
+  model->AddObserver(offline_page_observer_.get());
+#endif
 }
 
 bool ChromeBookmarkClient::PreferTouchIcon() {
